# Rust-Based-Large-Language-Model-Inference-Service-LLMIS-

./: .gitignore  Cargo.toml  README.md
config/: config.example.toml  config.toml
src/: config.rs  main.rs  metrics.rs  model.rs  routes.rs
static/: index.html
